# hydra_viewer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/simple_composition/: my_app.py
examples/simple_composition/conf/: config.yaml
src/hydra_viewer/: __init__.py  __main__.py  app.py
src/hydra_viewer/core/: merger.py  parser.py  snapshot.py
src/hydra_viewer/utils/: path_utils.py
src/hydra_viewer/widgets/: __init__.py  command_bar.py  directory_picker.py  file_browser.py  module_tree.py  multi_panel_editor.py  resolved_view.py  snapshot_modals.py  yaml_editor.py
